fix: documentation typo and attention error in AMD64/ARM64 documentation