@@ -12,7 +12,7 @@ Make sure that Java is installed and its PATH set in your system as well (at lea
 
 4. Build sample
     - navigate to `<module-root>/harness/tests`
-    - create embedded JVM: `jlink --add-modules java.base,java.logging --output jre`
+    - create embedded JVM:
         - For amd64 systems:
           - `jlink --add-modules java.base,java.logging --output jre-amd64`
         - For arm64 systems:
